--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -49,7 +49,7 @@ font-4 = "Iosevka Nerd Font:size=12"
 ;	battery		brightness
 modules-left = launcher sep2 bspwm sep2 usercard sep mplayer weather
 modules-center = title
-modules-right = mpd_control sep2 cpu_bar sep memory_bar sep pulseaudio sep sep network sep2 systray sep date sep power
+modules-right = mpd_control sep2 cpu_bar sep memory_bar sep pulseaudio sep sep network sep2 systray sep date sep
 
 separator = 
 dim-value = 1.0
