--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -126,12 +126,10 @@ label-empty-foreground = ${isabel.grey}
 
 [module/launcher]
 type = custom/text
-label = 󰣇
+label = "#"
 label-font = 2
 label-foreground = ${isabel.fg}
 
-click-left = OpenApps --menu
-click-right = OpenApps --rice
 
 ######################################################
 
@@ -144,7 +142,7 @@ label-foreground = ${isabel.bg-alt}
 
 [module/sep2]
 type = custom/text
-label = " 󰇙 "
+label = " | "
 label-foreground = ${isabel.blue}
 
 ######################################################
@@ -203,15 +201,6 @@ toggle-off-foreground   = ${isabel.red}
 
 scroll-up = playerctl --player=spotify volume 0.05+
 scroll-down = playerctl --player=spotify volume 0.05-
-
-######################################################
-
-[module/power]
-type = custom/text
-label = " "
-label-foreground = ${isabel.red}
-
-click-left = OpenApps --powermenu
 
 #####################################################
 
